[gd_scene load_steps=13 format=3 uid="uid://b4qnavc3uxlxl"]

[ext_resource type="Texture2D" uid="uid://cid6qpog3xcq6" path="res://sprites/nerd_zombie.png" id="1_lssd3"]
[ext_resource type="Script" path="res://scripts/nerd_zombie.gd" id="1_qaam1"]
[ext_resource type="Theme" uid="uid://xp6h1nwsksj4" path="res://hud.tres" id="3_tjfj3"]
[ext_resource type="AudioStream" uid="uid://or01olst6fju" path="res://sounds/zombie_hit_1.mp3" id="4_tkt3i"]
[ext_resource type="AudioStream" uid="uid://b5d7ftuh5ymm" path="res://sounds/zombie_hit_2.mp3" id="5_m7dxe"]
[ext_resource type="AudioStream" uid="uid://dcbphv631hp3w" path="res://sounds/zombie_hit_3.mp3" id="6_uqs5j"]
[ext_resource type="AudioStream" uid="uid://d080se4tuippj" path="res://sounds/zombie_noise_1.mp3" id="7_tpjbu"]
[ext_resource type="AudioStream" uid="uid://vquptr3cu1a1" path="res://sounds/zombie_noise_2.mp3" id="8_eshdu"]
[ext_resource type="AudioStream" uid="uid://t7182aucceah" path="res://sounds/zombie_attack.mp3" id="9_jove2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1q0qm"]
radius = 3.5
height = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lujj1"]
size = Vector2(14, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2xc4"]
size = Vector2(14, 15)

[node name="NerdZombie" type="CharacterBody2D" groups=["Zombie"]]
collision_layer = 4
collision_mask = 70
script = ExtResource("1_qaam1")
health = 3
loot_drop_chance = 8

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_lssd3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1q0qm")

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("RectangleShape2D_lujj1")

[node name="ProjectileDetector" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileDetector"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_w2xc4")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -7.0
offset_top = -18.0
offset_right = 7.0
offset_bottom = -16.0
theme = ExtResource("3_tjfj3")
max_value = 10.0
value = 10.0
show_percentage = false

[node name="HitSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tkt3i")

[node name="HitSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_m7dxe")

[node name="HitSound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_uqs5j")

[node name="MoanSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_tpjbu")
volume_db = 5.0

[node name="MoanSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_eshdu")
volume_db = 5.0

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_jove2")
volume_db = 10.0

[node name="MoanTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_entered" from="ProjectileDetector" to="." method="_on_projectile_detector_body_entered"]
[connection signal="finished" from="HitSound1" to="." method="_on_hit_sound_finished"]
[connection signal="finished" from="HitSound2" to="." method="_on_hit_sound_finished"]
[connection signal="finished" from="HitSound3" to="." method="_on_hit_sound_finished"]
[connection signal="timeout" from="MoanTimer" to="." method="_on_moan_timer_timeout"]
